0.2.0/src/docs/manual/plugin-references.adoc
:jbake-version: 0.2.0
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
:gradle-user-manual: https://docs.gradle.org/6.2.1/userguide
:gradle-language-reference: https://docs.gradle.org/6.2.1/dsl
:gradle-api-reference: https://docs.gradle.org/6.2.1/javadoc
:gradle-guides: https://guides.gradle.org/
= Nokee Plugin Reference
:jbake-type: reference_index
:jbake-tags: user manual, gradle plugin reference, nokee plugin, gradle
:jbake-description: Learn about all the Gradle plugins offered by Nokee.

This page contains links and short descriptions for all the core plugins provided by Nokee.

== JVM Runtimes

<<jni-library-plugin.adoc#,Java Native Interface (JNI) Library>>::
Provides support for building JNI library.

== Native Languages

<<cpp-language-plugin.adoc#,{cpp} Language>>::
Provides support for compiling {cpp} language.

<<c-language-plugin.adoc#,C Language>>::
Provides support for compiling C language.

<<objective-c-language-plugin.adoc#,Objective-C Language>>::
Provides support for compiling Objective-C language.

<<objective-cpp-language-plugin.adoc#,Objective-{cpp} Language>>::
Provides support for compiling Objective-{cpp} language.
