0.3.0/src/docs/manual/plugin-references.adoc
:jbake-version: 0.3.0
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
:gradle-user-manual: https://docs.gradle.org/6.2.1/userguide
:gradle-language-reference: https://docs.gradle.org/6.2.1/dsl
:gradle-api-reference: https://docs.gradle.org/6.2.1/javadoc
:gradle-guides: https://guides.gradle.org/
[[chapter:plugin-reference]]
= Nokee Plugin Reference
:jbake-type: reference_index
:jbake-tags: user manual, gradle plugin reference, nokee plugin, gradle
:jbake-description: Learn about all the Gradle plugins offered by Nokee.

This page contains links and short descriptions for all the core plugins provided by Nokee.

[[sec:plugin-reference-jvm]]
== JVM Runtimes

<<jni-library-plugin.adoc#,Java Native Interface (JNI) Library>>::
Provides support for building JNI library.

[[sec:plugin-reference-ios]]
== iOS Development

<<objective-c-ios-application-plugin.adoc#,Objective-C iOS Application>>::
Provides support for building Objective-C application for iOS devices.

[[sec:plugin-reference-native-languages]]
== Native Languages

<<cpp-language-plugin.adoc#,{cpp} Language>>::
Provides support for compiling {cpp} language.

<<c-language-plugin.adoc#,C Language>>::
Provides support for compiling C language.

<<objective-c-language-plugin.adoc#,Objective-C Language>>::
Provides support for compiling Objective-C language.

<<objective-cpp-language-plugin.adoc#,Objective-{cpp} Language>>::
Provides support for compiling Objective-{cpp} language.

[[sec:plugin-reference-ide]]
== IDE Integration

<<xcode-ide-plugin.adoc#,Xcode IDE>>::
Generates Xcode workspace and project files for the build that can be opened by the IDE.
